<resources>
	<string name="app_name">WAYN</string>

	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_radar">レーダー</string>
	<string name="title_activity_setting">設定</string>
	<string name="title_activity_group_search">グループ検索</string>
	<string name="title_activity_group_create">グループ作成</string>
	<string name="title_activity_group_manage">グループ管理</string>
	<string name="title_activity_display_group_setting">表示グループ選択</string>
	<string name="title_activity_group_request_list">加入申請リスト</string>
	<string name="title_activity_group_request_detail">加入申請詳細</string>
	<string name="title_activity_name_change">ユーザー名変更</string>
	<string name="title_activity_update_group_name">グループ名変更</string>
	<string name="title_activity_group_manage_leader">グループ管理: リーダー</string>
	<string name="title_activity_group_manage_memper">グループ管理: メンバー</string>

	<string name="btn_radar">レーダー</string>
	<string name="btn_setting">設定</string>
	<string name="btn_post_location_enable">位置情報を送信中\nタップで送信停止</string>
	<string name="btn_post_location_disable">位置情報を送信してません\nタップで送信開始</string>
	<string name="btn_change">変更</string>
	<string name="btn_create">グループ作成</string>
	<string name="btn_approve">承認</string>
	<string name="btn_reject">拒否</string>
	<string name="btn_search">検索</string>
	<string name="btn_request">グループ参加申請</string>
	<string name="btn_leave">グループを抜ける</string>
	<string name="btn_update_group_name">グループ名変更</string>
	<string name="btn_request_list">参加申請一覧</string>
	<string name="tglbtn_post_location_enable_on">位置情報送信 ON</string>
	<string name="tglbtn_post_location_enable_off">位置情報送信 OFF</string>
	<string name="edt_name_hint">ユーザー名</string>
	<string name="edt_group_name_hint">グループ名</string>
	<string name="edt_group_id_hint">グループID</string>
	<string name="label_user_id">ユーザーID: </string>
	<string name="label_user_name">ユーザー名: </string>
	<string name="label_group_id">グループID: </string>
	<string name="label_group_name">グループ名: </string>
	<string name="label_leader_id">リーダーID: </string>
	<string name="label_leader_name">リーダー名: </string>
</resources>
