<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				android:paddingBottom="@dimen/activity_vertical_margin"
				tools:context=".MainActivity">

	<Button
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="2"
		android:text="@string/btn_radar"
		android:textSize="24sp"
		android:id="@+id/btn_radar"/>

	<ToggleButton
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:textOff="@string/tglbtn_post_location_enable_off"
		android:textOn="@string/tglbtn_post_location_enable_on"
		android:textSize="20sp"
		android:id="@+id/tglbtn_post_location_enable"
		android:layout_gravity="center_horizontal"/>

	<Button
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:text="@string/btn_setting"
		android:textSize="20sp"
		android:id="@+id/btn_setting"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="ID: 00000"
		android:textSize="32sp"
		android:gravity="center"
		android:id="@+id/txt_user_id"/>

</LinearLayout>
