<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="48dp"
				android:paddingBottom="@dimen/activity_vertical_margin"
				tools:context="jp.gr.java_conf.shiolier.wayn.GroupRequestDetailActivity">


	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/label_user_id"
			android:textSize="20sp"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text=""
			android:textSize="24sp"
			android:id="@+id/txt_user_id"/>

	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/label_user_name"
			android:textSize="20sp"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text=""
			android:textSize="24sp"
			android:id="@+id/txt_user_name"/>

	</LinearLayout>


	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="48dp">

		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/btn_approve"
			android:id="@+id/btn_approve"/>

		<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/btn_reject"
			android:id="@+id/btn_reject"/>
	</LinearLayout>


</LinearLayout>
